src/test/OverrideReturnFail/OverrideReturnFail.expected
error: OverrideReturnFail.panda:17:5: incompatible return type: a method returning 'panda.core.Object' may not override a method returning 'panda.core.String'
error: OverrideReturnFail.panda:22:5: incompatible return type: a method returning 'panda.core.Int16' may not override a method returning 'panda.core.Int32'
error: OverrideReturnFail.panda:27:5: incompatible return type: a method returning 'panda.core.String?' may not override a method returning 'panda.core.String'
3 errors
