src/test/OverrideReturnFail/OverrideReturnFail.panda
class Super {
    function waffle():String {
        return "Not a waffle!"
    }

    function int():Int32 {
        return 1000
    }

    function nonNull():String {
        return "string!"
    }
}

class Sub : Super {
    @override
    function waffle():Object {
        return "Waffle!"
    }

    @override
    function int():Int16 {
        return 1000
    }

    @override
    function nonNull():String? {
        return null
    }
}
